--- a/src/govuk/components/cookie-banner/template.njk
+++ b/src/govuk/components/cookie-banner/template.njk
@@ -1,24 +1,24 @@
-{% from "../button/macro.njk" import govukButton %}
+{% from "../button/macro.njk" import govukButton -%}
 
 <div class="govuk-cookie-banner" role="region" aria-label="{{ params.ariaLabel | default("Cookie banner") }}">
-  {% for banner in params.banners %}
-    {%- set classNames = "govuk-cookie-banner__container govuk-width-container" -%}
+  {%- for banner in params.banners %}
+    {% set classNames = "govuk-cookie-banner__container govuk-width-container" %}
     {% if banner.classes %}
-      {%- set classNames = classNames + " " + banner.classes -%}
-    {% endif -%}
+      {% set classNames = classNames + " " + banner.classes %}
+    {% endif %}
 
-    <div class="{{classNames}}" {% if banner.role %}role="{{banner.role}}"{% endif %}
+    <div class="{{classNames}}" {%- if banner.role %} role="{{banner.role}}"{% endif %}
     {%- for attribute, value in banner.attributes %} {{attribute}}="{{value}}"{% endfor %}
-    {% if banner.hidden %} hidden {% endif %}>
+    {% if banner.hidden %} hidden{% endif %}>
 
       {% if banner.headingHtml or banner.headingText %}
-        <h2 class="govuk-cookie-banner__heading govuk-heading-m">
-          {%- if banner.headingHtml -%}
-            {{ banner.headingHtml | safe }}
-          {%- else -%}
-            {{ banner.headingText }}
-          {%- endif -%}
-        </h2>
+      <h2 class="govuk-cookie-banner__heading govuk-heading-m">
+        {%- if banner.headingHtml -%}
+          {{ banner.headingHtml | safe }}
+        {%- else -%}
+          {{ banner.headingText }}
+        {%- endif -%}
+      </h2>
       {% endif %}
 
       <div class="govuk-cookie-banner__content">
@@ -32,26 +32,25 @@
       {% if banner.actions %}
       <div class="govuk-button-group">
         {% for action in banner.actions %}
-            {% if action.href %}
-              {% set linkClasses = "govuk-link" %}
-              {% if action.classes %}
-                {% set linkClasses = linkClasses + " " + action.classes %}
-              {% endif %}
-              <a class="{{ linkClasses }}" href="{{ action.href }}" {%- for attribute, value in action.attributes %} {{attribute}}="{{value}}"{% endfor %}>{{ action.text }}</a>
-            {% else %}
-              {{ govukButton({
-                "text": action.text,
-                "value": action.value,
-                "name": action.name,
-                "type": action.type,
-                "classes": action.classes,
-                "attributes": action.attributes
-              }) }}
+          {% if action.href %}
+            {% set linkClasses = "govuk-link" %}
+            {% if action.classes %}
+              {% set linkClasses = linkClasses + " " + action.classes %}
             {% endif %}
+            <a class="{{ linkClasses }}" href="{{ action.href }}" {%- for attribute, value in action.attributes %} {{attribute}}="{{value}}"{% endfor %}>{{ action.text }}</a>
+          {% else %}
+            {{ govukButton({
+              "text": action.text,
+              "value": action.value,
+              "name": action.name,
+              "type": action.type,
+              "classes": action.classes,
+              "attributes": action.attributes
+            }) | indent(12) | trim }}
+          {% endif %}
         {% endfor %}
       </div>
       {% endif %}
-
     </div>
   {% endfor %}
 </div>
