--- a/app/views/full-page-examples/cookie-banner-client-side/index.njk
+++ b/app/views/full-page-examples/cookie-banner-client-side/index.njk
@@ -28,7 +28,7 @@ notes: >-
 {% block bodyStart %}
     {{ govukCookieBanner({
     "classes": "js-cookies-banner",
-    "banners": [
+    "messages": [
         {
             "headingText": "Cookies on this government service",
             "text": "We use analytics cookies to help understand how users use our service.",
