--- a/src/govuk/components/cookie-banner/template.njk
+++ b/src/govuk/components/cookie-banner/template.njk
@@ -1,6 +1,7 @@
 {% from "../button/macro.njk" import govukButton -%}
 
-<div class="govuk-cookie-banner" role="region" aria-label="{{ params.ariaLabel | default("Cookie banner") }}">
+<div class="govuk-cookie-banner" role="region" aria-label="{{ params.ariaLabel | default("Cookie banner") }}"
+  {%- if params.hidden %} hidden{% endif %}>
   {%- for banner in params.banners %}
     {% set classNames = "govuk-cookie-banner__message govuk-width-container" %}
     {% if banner.classes %}
