--- a/src/govuk/components/phase-banner/template.njk
+++ b/src/govuk/components/phase-banner/template.njk
@@ -3,11 +3,13 @@
 <div class="govuk-phase-banner
   {%- if params.classes %} {{ params.classes }}{% endif %}"{% for attribute, value in params.attributes %} {{ attribute }}="{{ value }}"{% endfor %}>
   <p class="govuk-phase-banner__content">
-    {{ govukTag({
-      text: params.tag.text,
-      html: params.tag.html,
-      classes: "govuk-phase-banner__content__tag" + (" " + params.tag.classes if params.tag.classes)
-    }) | indent(4) | trim }}
+    <span class="govuk-phase-banner__phase">
+      {{ govukTag({
+        text: params.tag.text,
+        html: params.tag.html,
+        classes: "govuk-phase-banner__content__tag" + (" " + params.tag.classes if params.tag.classes)
+      }) | indent(4) | trim }}
+    </span>
     <span class="govuk-phase-banner__text">
       {{ params.html | safe if params.html else params.text }}
     </span>
