[WIP] Calculate underline colour from text colour

--- a/app/views/examples/links/index.njk
+++ b/app/views/examples/links/index.njk
@@ -14,7 +14,9 @@
   'Link': '',
   'Link with no visited state': 'govuk-link--no-visited-state',
   'Text link': 'govuk-link--text-colour',
-  'Muted link': 'govuk-link--muted'
+  'Muted link': 'govuk-link--muted',
+  'Error link': 'govuk-link--error',
+  'Success link': 'govuk-link--success'
 } %}
 
 {% set states = {
