--- a/src/govuk/components/checkboxes/template.njk
+++ b/src/govuk/components/checkboxes/template.njk
@@ -67,38 +67,42 @@
         {%- endif -%}
         {% set name = item.name if item.name else params.name %}
         {% set conditionalId = "conditional-" + id %}
-        {% set hasHint = true if item.hint.text or item.hint.html %}
-        {% set itemHintId = id + "-item-hint" if hasHint else "" %}
-        {% set itemDescribedBy = describedBy if not hasFieldset else "" %}
-        {% set itemDescribedBy = (itemDescribedBy + " " + itemHintId) | trim %}
-        <div class="govuk-checkboxes__item">
-          <input class="govuk-checkboxes__input" id="{{ id }}" name="{{ name }}" type="checkbox" value="{{ item.value }}"
-          {{-" checked" if item.checked }}
-          {{-" disabled" if item.disabled }}
-          {%- if item.conditional.html %} data-aria-controls="{{ conditionalId }}"{% endif -%}
-          {%- if itemDescribedBy %} aria-describedby="{{ itemDescribedBy }}"{% endif -%}
-          {%- for attribute, value in item.attributes %} {{ attribute }}="{{ value }}"{% endfor -%}>
-          {{ govukLabel({
-            html: item.html,
-            text: item.text,
-            classes: 'govuk-checkboxes__label' + (' ' + item.label.classes if item.label.classes),
-            attributes: item.label.attributes,
-            for: id
-          }) | indent(6) | trim }}
-          {% if hasHint %}
-          {{ govukHint({
-            id: itemHintId,
-            classes: 'govuk-checkboxes__hint' + (' ' + item.hint.classes if item.hint.classes),
-            attributes: item.hint.attributes,
-            html: item.hint.html,
-            text: item.hint.text
-          }) | indent(6) | trim }}
-          {% endif %}
-        </div>
-        {% if item.conditional.html %}
-          <div class="govuk-checkboxes__conditional{% if not item.checked %} govuk-checkboxes__conditional--hidden{% endif %}" id="{{ conditionalId }}">
-            {{ item.conditional.html | safe }}
+        {%- if item.divider %}
+          <div class="govuk-checkboxes__divider">{{ item.divider }}</div>
+        {%- else %}
+          {% set hasHint = true if item.hint.text or item.hint.html %}
+          {% set itemHintId = id + "-item-hint" if hasHint else "" %}
+          {% set itemDescribedBy = describedBy if not hasFieldset else "" %}
+          {% set itemDescribedBy = (itemDescribedBy + " " + itemHintId) | trim %}
+          <div class="govuk-checkboxes__item">
+            <input class="govuk-checkboxes__input" id="{{ id }}" name="{{ name }}" type="checkbox" value="{{ item.value }}"
+            {{-" checked" if item.checked }}
+            {{-" disabled" if item.disabled }}
+            {%- if item.conditional.html %} data-aria-controls="{{ conditionalId }}"{% endif -%}
+            {%- if itemDescribedBy %} aria-describedby="{{ itemDescribedBy }}"{% endif -%}
+            {%- for attribute, value in item.attributes %} {{ attribute }}="{{ value }}"{% endfor -%}>
+            {{ govukLabel({
+              html: item.html,
+              text: item.text,
+              classes: 'govuk-checkboxes__label' + (' ' + item.label.classes if item.label.classes),
+              attributes: item.label.attributes,
+              for: id
+            }) | indent(6) | trim }}
+            {% if hasHint %}
+            {{ govukHint({
+              id: itemHintId,
+              classes: 'govuk-checkboxes__hint' + (' ' + item.hint.classes if item.hint.classes),
+              attributes: item.hint.attributes,
+              html: item.hint.html,
+              text: item.hint.text
+            }) | indent(6) | trim }}
+            {% endif %}
           </div>
+          {% if item.conditional.html %}
+            <div class="govuk-checkboxes__conditional{% if not item.checked %} govuk-checkboxes__conditional--hidden{% endif %}" id="{{ conditionalId }}">
+              {{ item.conditional.html | safe }}
+            </div>
+          {% endif %}
         {% endif %}
       {% endif %}
     {% endfor %}
