Enable cookie banner action to be a link button
Enable the action to be a link styled as a button, with role="button" and draggable="false", if both
href and type="button" are provided. This matches the [Start buttons](https://design-system.service.gov.uk/components/button/#start-buttons).

( A more terse solution to achieve this in the macro would be to skip the first condition with

```
{% if action.href && action.type != "button"% }
```

and pass a `href` to the button macro in `else`. This would work since Nunjucks doesn't render blank
attributes for options whose values aren't specified in the macro. However, other templating languages
might not follow a similar pattern - and we should try and keep our macro aligned with what ports of
GOV.UK Frontend do in their macros.)

--- a/src/govuk/components/cookie-banner/template.njk
+++ b/src/govuk/components/cookie-banner/template.njk
@@ -40,11 +40,21 @@
       <div class="govuk-button-group">
         {% for action in message.actions %}
           {% if action.href %}
-            {% set linkClasses = "govuk-link" %}
-            {% if action.classes %}
-              {% set linkClasses = linkClasses + " " + action.classes %}
+            {% if action.type == "button" %}
+              {{ govukButton({
+                "text": action.text,
+                "type": "button",
+                "classes": action.classes,
+                "href": action.href,
+                "attributes": action.attributes
+              }) | indent(12) | trim }}
+            {% else %}
+              {% set linkClasses = "govuk-link" %}
+              {% if action.classes %}
+                {% set linkClasses = linkClasses + " " + action.classes %}
+              {% endif %}
+              <a class="{{ linkClasses }}" href="{{ action.href }}" {%- for attribute, value in action.attributes %} {{attribute}}="{{value}}"{% endfor %}>{{ action.text }}</a>
             {% endif %}
-            <a class="{{ linkClasses }}" href="{{ action.href }}" {%- for attribute, value in action.attributes %} {{attribute}}="{{value}}"{% endfor %}>{{ action.text }}</a>
           {% else %}
             {{ govukButton({
               "text": action.text,
