Check for 'Hide' before attaching event listener
Fixes a JavaScript error currently in the review app:
```
Uncaught TypeError: Cannot read property
'addEventListener' of null`
```

--- a/app/views/full-page-examples/cookie-banner-server-side/index.njk
+++ b/app/views/full-page-examples/cookie-banner-server-side/index.njk
@@ -198,8 +198,10 @@ notes: >-
       })
     }
 
-    hideButton.addEventListener('click', function() {
-      cookieBanner.setAttribute('hidden', 'hidden')
-    })
+    if (hideButton) {
+      hideButton.addEventListener('click', function() {
+        cookieBanner.setAttribute('hidden', 'hidden')
+      })
+    }
   </script>
 {% endblock %}
